--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -3,6 +3,7 @@ include/ClimatologyConfigDialog.h
 include/ClimatologyDialog.h
 include/ClimatologyOverlayFactory.h
 include/ClimatologyUI.h
+include/defs.h
 include/gldefs.h
 include/icons.h
 include/IsoBarMap.h
