--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,9 +45,9 @@ workflows:
             <<: *std-filters
         - build-macos-wx315:
             <<: *std-filters
-        - build-android-arm64:
+#        - build-android-arm64:
             <<: *std-filters
-        - build-android-armhf:
+#        - build-android-armhf:
             <<: *std-filters
 
 orbs:
