--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-## ---------------------------------------------------------------------------
+git goi## ---------------------------------------------------------------------------
 ## Author:      Sean d'Epagnier
 ## ***************************************************************************
 ## *   Copyright (C) 2010 by Sean d'Epagnier                              *
@@ -55,7 +55,7 @@ set(LONG_DESCRIPTION "Climatology provides overlay capabilities for historic wea
 
 set(VERSION_MAJOR "1")
 set(VERSION_MINOR "4")
-set(VERSION_PATCH "33")
+set(VERSION_PATCH "34")
 set(VERSION_TWEAK "0")
 set(VERSION_DATE "26/11/2021") # DD/MM/YYYY format
 set(OCPN_MIN_VERSION "ov50")
