--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,6 +68,8 @@ workflows:
             <<: *std-filters
         - build-flatpak-x86-2208:
             <<: *std-filters
+        - build-flatpak-aarch64-2208:
+            <<: *std-filters
         - build-flatpak-arm64:
             <<: *std-filters
         - build-macos:
@@ -519,6 +521,22 @@ jobs:
             command: bash ci/circleci-build-flatpak.sh
             no_output_timeout: 30m
         - deploy-code
+    build-flatpak-arm64:
+        machine:
+            image: ubuntu-2004:202101-01
+        resource_class: arm.medium
+        environment:
+        - OCPN_TARGET:  flatpak-arm64
+        - FLATPAK_BRANCH: stable
+        - CLOUDSMITH_PKG_EXT: gz
+        - SDK_VER: 20.08
+        - DEPLOY_USE_ORB: true
+        steps:
+        - checkout
+        - run: chmod a+x ci/*.sh
+        - run:
+            command: bash ci/circleci-build-flatpak.sh
+        - deploy-code
     build-flatpak-x86-2208:
         machine:
             image: ubuntu-2004:202010-01
@@ -535,15 +553,15 @@ jobs:
             command: bash ci/circleci-build-flatpak.sh
             no_output_timeout: 30m
         - deploy-code
-    build-flatpak-arm64:
+    build-flatpak-aarch64-2208:
         machine:
             image: ubuntu-2004:202101-01
         resource_class: arm.medium
         environment:
-        - OCPN_TARGET:  flatpak-arm64
+        - OCPN_TARGET:  flatpak-aarch64
         - FLATPAK_BRANCH: stable
         - CLOUDSMITH_PKG_EXT: gz
-        - SDK_VER: 20.08
+        - SDK_VER: 22.08
         - DEPLOY_USE_ORB: true
         steps:
         - checkout
